[package]
name = "user_databook"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"]}
dotenv = "0.15.0"
json = "0.12.4"
jsonwebtoken = "9.3.1"
rand = "0.9.0"
rocket = { version = "0.5.1", features = ["uuid", "serde_json", "json"] }
serde = { version = "1.0.217", features = ["derive"]}
sha2 = "0.10.8"
sqlx = { version = "0.8.3", features = [
  "runtime-async-std",
  "postgres",
  "uuid",
  "json",
  "chrono",
] }
uuid = { version = "1.13.1", features = ["v4", "serde"] }
